# openvino

./: 0001-fix_artemy.patch  CMakeLists.txt  openvino-splitpdb-new.diff
src/plugins/intel_npu/src/: CMakeLists.txt
src/plugins/intel_npu/src/al/: CMakeLists.txt
src/plugins/intel_npu/src/al/include/: npu.hpp  npu_private_properties.hpp  update_dryon_flag.hpp
src/plugins/intel_npu/src/al/src/: icompiler.cpp  metadata.cpp  update_dryon_flag.cpp
src/plugins/intel_npu/src/backend/: CMakeLists.txt
src/plugins/intel_npu/src/backend/include/: zero_backend.hpp  zero_device.hpp  zero_dynamic_arguments.hpp  zero_dynamic_infer_request.hpp  zero_dynamic_pipeline.hpp
src/plugins/intel_npu/src/backend/src/: zero_backend.cpp  zero_device.cpp  zero_dynamic_arguments.cpp  zero_dynamic_infer_request.cpp  zero_dynamic_pipeline.cpp  zero_executor.cpp  zero_infer_request.cpp  zero_init.cpp  zero_memory.cpp  zero_pipeline.cpp  zero_profiling.cpp  zero_remote_tensor.cpp
src/plugins/intel_npu/src/common/: CMakeLists.txt
src/plugins/intel_npu/src/common/src/: dynamic_arguments.cpp  dynamic_arguments_impl.cpp  filtered_config.cpp  idynamic_graph.cpp  igraph.cpp  sync_infer_request.cpp
src/plugins/intel_npu/src/compiler/include/: driver_compiler_adapter.hpp  zero_compiler_in_driver.hpp
src/plugins/intel_npu/src/compiler/src/: driver_compiler_adapter.cpp  graph_transformations.cpp  zero_compiler_in_driver.cpp
src/plugins/intel_npu/src/compiler_adapter/: CMakeLists.txt
src/plugins/intel_npu/src/compiler_adapter/include/: compiler_adapter_factory.hpp  compiler_impl.hpp  graph.hpp  (+9 more)
(+136 files in other folders)
